2008-09-22  Martin Rubey  <martin.rubey@univie.ac.at>
            Francois Maltey <fmaltey@nerim.fr>
	
	* contrib/emacs/fricas.el: some bugfixes and more documentation.
	
2008-09-22  Martin Rubey  <martin.rubey@univie.ac.at>
            Francois Maltey <fmaltey@nerim.fr>

	* contrib/emacs/fricas-cpl.el, contrib/emacs/fricas.el,
	src/interp/parsing.lisp, src/interp/util.lisp,
	src/share/doc/msgs/s2-us.msgs: add a new emacs mode and fix a few
	leftovers.  Just (require 'fricas), M-x fricas and enjoy.

2008-09-19  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/interp/int-top.boot: remove ioHook(endOfOutput), since there
	seems to be a problem with long input lines, and the ioHook I send
	would be long for the emacs mode then...

2008-09-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Better unparsing.
	* src/interp/format.boot: sumOrParen(), productOrParen(),
	powerOrParen(), coerceOrParen(), appOrParen(): New functions.
	binop2String(): call sumOrParen insted of Fortran machinery.
	form2String1(): Handle package calls.
	application2String(): Likewise, add parentheses also in
	one argument case.

2008-09-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/boo-cat.input: Remove nonexistent categories
	from the list.

2008-09-19  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/interp/ht-util.boot, src/interp/i-toplev.boot,
	src/interp/i-util.boot, src/interp/int-top.boot,
	src/interp/msgdb.boot, src/interp/server.boot: Add more markers to
	support new emacs mode.

2008-09-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/lisplib.boot: Avoid spurious nil attributes
	(fixes problem introuduced in rev. 368).

2008-09-17  Bill Page <bill.page@newsynthesis.org>
            Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fortpak.spad.pamphlet,
	* src/algebra/mkfunc.spad.pamphlet: export parse

2008-09-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/define.boot, src/interp/lisplib.boot,