@@ -1,3 +1,8 @@
+2008-09-23  Martin Rubey  <martin.rubey@univie.ac.at>
+
+	* contrib/emacs/fricas.el, contrib/emacs/fricas-cpl.el: more
+	documentation.
+
 2008-09-22  Martin Rubey  <martin.rubey@univie.ac.at>
             Francois Maltey <fmaltey@nerim.fr>
 	
